# CMA

./: .gitignore  README.md  main.py  package-lock.json  package.json  requirements.txt
backend/: Cargo.toml  __init__.py  alembic.ini  auth.py  config.py  construction_management.db  crud.py  database.py  exceptions.py  logger.py  main.py  middleware.py  models.py  monitoring.py  package-lock.json  pytest.ini  requirements.txt  schemas.py  setup.py  setup.sh
backend/alembic/: env.py
backend/alembic/versions/: create_api_docs_tables.py
backend/app/: deps.py  main.py
backend/app/api/: api.py  contracts.py
backend/app/core/: auth.py  cache.py  config.py  database.py  db_interface.py  error_handlers.py  local_postgres.py  monitoring.py  permissions.py  redis.py  security.py
backend/app/crud/: api_doc.py  base.py  budget.py  construction.py  construction_progress.py  contract.py  cost.py  daily_report.py  document.py  labor.py  project.py  task.py
backend/app/db/: __init__.py  database.py  schema.sql
backend/app/models/: __init__.py  api_doc.py  base.py  budget.py  client.py  construction.py  construction_progress.py  contract.py  cost.py  daily_report.py  department.py  document.py  expense.py  file.py  (+15 more)
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: env.py
backend/scripts/: manage_db.py
backend/src/: main.rs
backend/tests/: conftest.py  test_api.py  test_api_doc.py  test_auth.py  test_contracts.py  test_error_handlers.py  test_labor.py  test_models.py  test_monitoring.py  test_notifications.py  test_permissions.py
(+192 files in other folders)
